Revert "MINOR: fix custom property layout issues (#18065)"
This reverts commit 778900305fa6e5f3be3d90ce0995d505f067ee87.

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/CustomPropertyTable/property-value.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/CustomPropertyTable/property-value.less
@@ -31,17 +31,14 @@
   }
 }
 
-.custom-property-value-toggle-btn {
-  svg {
+.ant-btn-text.custom-property-value-toggle-btn {
+  border-radius: 100%;
+  background: @btn-bg-color;
+  border-color: transparent;
+  height: 30px;
+  width: 30px;
+  .anticon {
     vertical-align: middle;
-    width: 14px;
-    transition: 0.3s ease-in-out;
-  }
-}
-
-.custom-property-value-toggle-btn.active {
-  svg {
-    transform: rotate(180deg);
   }
 }
 
@@ -61,14 +58,6 @@
 .custom-property-card {
   .ant-card-body {
     overflow-x: scroll;
-  }
-
-  .property-name {
-    font-weight: 400;
-  }
-
-  .property-value {
-    font-weight: 500;
   }
 }
 
