--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -262,14 +262,6 @@ a[href].link-text-grey,
   -webkit-box-orient: vertical;
 }
 
-.max-one-line {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-
 .mx-auto {
   margin-right: auto;
   margin-left: auto;
